# quick-quack

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  DOCUMENTATION_STATUS.md  Dockerfile  INSTALL.md  MANIFEST.in  PHASE_2_COMPLETION.md  README.md  build.sh  create_test_db.py  docker-compose.prod.yml  docker-compose.yml  env.example  implementation_plan.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
app/: __init__.py  api.py  cli.py  config.py  database.py  dynamic_endpoints.py  exceptions.py  logging_config.py  macro_service.py  main.py  models.py  monitoring.py
docs/: API.md  DEVELOPMENT.md  SECURITY.md  USER_GUIDE.md  USER_GUIDE_NEW.md
monitoring/: prometheus.yml
tests/: conftest.py  test_api.py  test_cli.py  test_database.py  test_integration.py  test_macro_service.py  test_performance.py  test_smoke.py
