[metadata]
name = quick-quack
version = 1.0.0
author = quick-quack
author_email = info@quick-quack.dev
description = A production-ready REST API server that exposes DuckDB macros as HTTP endpoints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lab1702/quick-quack
project_urls =
    Bug Tracker = https://github.com/lab1702/quick-quack/issues
    Documentation = https://github.com/lab1702/quick-quack/docs
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi>=0.110.0
    uvicorn[standard]>=0.27.0
    duckdb>=1.3.2
    pydantic>=2.6.0
    python-multipart>=0.0.7
    gunicorn>=21.2.0
    pydantic-settings>=2.2.0
    psutil>=5.9.0
    click>=8.0.0

[options.packages.find]
include = app*

[options.entry_points]
console_scripts =
    quick-quack = app.cli:main
